<resources>
    <string name="app_name">Quản lý bán hàng</string>
    <string name="menu_them">Them</string>
    <string name="close">Close Drawer</string>
    <string name="open">Open Drawer</string>
    <string name="load_failed">Load Failed</string>
    <string name="thong_ke">Thống kê</string>
    <string name="thuc_don">Thực đơn</string>
    <string name="ban_hang">Bán hàng</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="thiet_lap">Thiết lập</string>
    <string name="thong_bao">Thông báo</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="chua_co_khach">Chưa có khách gọi món</string>
    <string name="chon_mon">Bấm vào đây hoặc dấu + để chọn món</string>
    <string name="tinh_tien">Tính tiền</string>
    <string name="cat">Cất</string>
    <string name="thu_tien">Thu tiền</string>
    <string name="xoa">Xóa</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="huy">Hủy</string>
    <string name="nhan_vien">Nhân viên</string>
    <string name="toasl_nhap_lieu">Vui lòng nhập dữ liệu đầy đủ</string>
</resources>
