<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_thuc_don"
            android:icon="@drawable/ic_food"
            android:title="@string/thuc_don" />
        <item
            android:id="@+id/nav_nhan_vien"
            android:icon="@drawable/ic_nhanvien"
            android:title="@string/nhan_vien" />
    </group>
    <item android:title="@string/thiet_lap">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_bao_cao"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Báo cáo" />
            </group>
        </menu>
    </item>


</menu>
