<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="264dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#96B7CA"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/load_failed"
                    android:src="@drawable/profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_below="@id/profileImage"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jonathan Lee"
                        android:textColor="#FFF"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="shopcafe@gmail.com"
                        android:textColor="#FFF"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <info.hoang8f.widget.FButton
                    android:id="@+id/banHangButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ban_hang"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextButton"
                    fbutton:buttonColor="@color/colorButton"
                    fbutton:cornerRadius="5dp"
                    fbutton:shadowColor="@color/colorShadowButton"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="5dp" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/thucDonButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/thuc_don"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextButton"
                    fbutton:buttonColor="@color/colorButton"
                    fbutton:cornerRadius="5dp"
                    fbutton:shadowColor="@color/colorShadowButton"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="5dp" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/thongKeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/thong_ke"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextButton"
                    fbutton:buttonColor="@color/colorButton"
                    fbutton:cornerRadius="5dp"
                    fbutton:shadowColor="@color/colorShadowButton"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="5dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.NavigationView>